--- a/src/SsoServer/SsoServer.csproj
+++ b/src/SsoServer/SsoServer.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.2.0" />
+    <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.2.1" />
 
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.0" />
 	<PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
@@ -16,5 +17,11 @@
 	<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\AspNetCoreIdentity\" />
+    <Folder Include="Data\Migrations\IdentityServer\ConfigurationDb\" />
+    <Folder Include="Data\Migrations\IdentityServer\PersistedGrantDb\" />
   </ItemGroup>
 </Project>
