--- a/src/SsoServer/appsettings.json
+++ b/src/SsoServer/appsettings.json
@@ -12,6 +12,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Data Source=SsoServer.db;"
   }
 }
