--- a/src/SsoServer/SsoServer.csproj
+++ b/src/SsoServer/SsoServer.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.2.0" />
     <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.2.1" />
+    <PackageReference Include="Duende.IdentityServer.Storage" Version="6.2.1" />
 
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.0" />
 	<PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
@@ -20,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Config\" />
     <Folder Include="Data\Migrations\AspNetCoreIdentity\" />
     <Folder Include="Data\Migrations\IdentityServer\ConfigurationDb\" />
     <Folder Include="Data\Migrations\IdentityServer\PersistedGrantDb\" />
