--- a/src/SsoServer/SsoServer.csproj
+++ b/src/SsoServer/SsoServer.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.2.0" />
     <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.2.1" />
     <PackageReference Include="Duende.IdentityServer.Storage" Version="6.2.1" />
+    <PackageReference Include="MediatR" Version="11.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.0" />
 	<PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
@@ -21,7 +23,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Config\" />
     <Folder Include="Data\Migrations\AspNetCoreIdentity\" />
     <Folder Include="Data\Migrations\IdentityServer\ConfigurationDb\" />
     <Folder Include="Data\Migrations\IdentityServer\PersistedGrantDb\" />
